26 April 2024: Wouter
	- Fix cachedb with serve-expired-client-timeout disabled. The edns
	  subnet module deletes global cache and cachedb cache when it
	  stores a result, and serve-expired is enabled, so that the global
	  reply, that is older than the ecs reply, does not return after
	  the ecs reply expires.
	- Add unit tests for cachedb and subnet cache expired data.

25 April 2024: Wouter
	- Fix configure flto check error, by finding grep for it.
	- Merge #1041: Stub and Forward unshare. This has one structure
	  for them and fixes #1038: fatal error: Could not initialize
	  thread / error: reading root hints.
	- Fix to disable fragmentation on systems with IP_DONTFRAG,
	  with a nonzero value for the socket option argument.
	- Fix doc unit test for out of directory build.

24 April 2024: Wouter
	- Fix ci workflow for macos for moved install locations.

23 April 2024: Yorgos
	- Merge #1053: Remove child delegations from cache when grandchild
	  delegations are returned from parent.

22 April 2024: Wouter
	- Add checklock feature verbose_locking to trace locks and unlocks.
	- Fix edns subnet to sort rrset references when storing messages
	  in the cache. This fixes a race condition in the rrset locks.

15 April 2024: Wouter
	- Fix #1048: Update ax_pkg_swig.m4 and ax_pthread.m4.
	- Fix configure, autoconf for #1048.

15 April 2024: Yorgos
	- Merge #1049 from Petr Menšík: Py_NoSiteFlag is not needed since
	  Python 3.8

12 April 2024: Wouter
	- Fix cachedb for serve-expired with serve-expired-client-timeout.
	- Fixup unit test for cachedb server expired client timeout with
	  a check if response if from upstream or from cachedb.
	- Fixup cachedb to not refetch when serve-expired-client-timeout is
	  used.

10 April 2024: Wouter
	- Implement cachedb-check-when-serve-expired: yes option, default
	  is enabled. When serve expired is enabled with cachedb, it first
	  checks cachedb before serving the expired response.
	- Fixup compile without cachedb.